# kr-data-portal-client

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  __init__.py  client.py  final_verify.py  models.py  pyproject.toml  quick_test.py  response_raw.json
.github/workflows/: ci-cd.yml  ci.yml  publish.yml
scripts/: diagnose_api.py  generate_client.py  mock_verify.py  verify_data.py  verify_data_final.py
specs/: financial_services.yaml
src/kr_data_portal/: __init__.py  client.py  financial_services.py
src/kr_data_portal/models/: base.py  financial_services.py
src/kr_data_portal_client.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_financial_services.py  test_integration.py  test_parsing_fix.py  urllib_test.py  verify_keys.py
venv_verify/: pyvenv.cfg
verify_dir/: main.py  pyproject.toml
